# satellite_numeric

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  methods.rs  operators.rs  pddl_parser.rs
