[package]
name = "satellite_numeric"
version = "0.1.0"
authors = ["Ivy <ivyjs@hendrix.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhop = {git = "https://github.com/gjf2a/anyhop"}
pddl_problem_parser = {git = "https://github.com/gjf2a/pddl_problem_parser"}
sexpy = "0.5.6"
io-error = "0.1.1"
strum = "0.13.0"
strum_macros = "0.13.0"
